<resources>
    <string name="app_name">RAKON</string>
    <string name="logo_placeholder">[APP]</string>
    <string name="title_activity_view_stories">ViewStories</string>
    <string name="all_stories">All Stories</string>
    <string name="your_stories">Your Stories</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="serious_label">SERIOUS</string>
    <string name="place_holder_stamp">TheFiveHundred | 4.6.18</string>
    <string name="stories_text">ALL STORIES</string>
    <string name="ystories_text">YOUR STORIES</string>
    <string name="title_activity_story_entries">StoryEntries</string>
    <string name="add_entry_text">+ ADD ENTRY</string>
    <string name="example_text">This is what I like to call "example text". This is just testing out how my text will appear on the screen.</string>
    <string name="welcome_text">Welcome Back!</string>
    <string name="view_stories_text">VIEW STORIES</string>
    <string name="content_label">CONTENT</string>
    <string name="add_entry_label">ADD ENTRY</string>
    <string name="max_700_chars">(up to 700 characters)</string>
    <string name="or_sign_in"><u>or Sign In</u></string>
    <string name="sign_out">Sign Out</string>
    <string name="email_add">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter the name of a story</string>
    <string name="create_new">+ CREATE NEW</string>
    <string name="make_it_creative">Make it creative!</string>
    <string-array name="genres">
        <item>SERIOUS</item>
        <item>FUN</item>
    </string-array>
    <string name="forgot_pass"><u>Forgot Your Password?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
