<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_anim"
    android:id="@+id/layout_signIn"
    tools:context="com.coincalc.anduril.rakon.SignUpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408">

        <EditText
            android:id="@+id/emailAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textColor="@color/whiteGray"
            android:textColorHint="@color/whiteGray"
            android:background="@drawable/purp_white_outline"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/email_add"
            android:fontFamily="@font/zonapro_bold"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="169dp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/purp_white_outline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/whiteGray"
            android:textColorHint="@color/whiteGray"
            android:fontFamily="@font/zonapro_bold"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="319dp" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/all_white"
            android:text="@string/sign_in"
            android:textColor="@color/mainDark"
            android:textSize="20sp"
            android:fontFamily="@font/zonapro_bold"
            android:onClick="signInUser"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="395dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
