<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coincalc.anduril.rakon.com.coincalc.anduril.rakken.NewEntry">

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="399dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/content_purp_outline"
        android:ems="10"
        android:fontFamily="@font/zonapro_bold"
        android:gravity="top"
        android:hint="Get writing!"
        android:inputType="textMultiLine"
        android:maxLength="700"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textColor="@color/mainDark"
        android:textColorHint="@color/mainDark"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_label"
        android:layout_width="77dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/zonapro_light"
        android:text="@string/content_label"
        android:textColor="@color/mainDark"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/purple_invert_selector"
        android:fontFamily="@font/zonapro_bold"
        android:gravity="center"
        android:text="@string/add_entry_label"
        android:textColor="@color/whiteGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/max_700_chars"
        android:textColor="@color/darkGray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/content_label"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
